--- a/proyectopractica/src/app/vistas/login/login.component.html
+++ b/proyectopractica/src/app/vistas/login/login.component.html
@@ -14,7 +14,7 @@
     <form> <!--[formGroup]= "loginForm" (ngSubmit)= "onLogin(loginForm.value)" -->
       <input type="text" id="Registro_Academico" class="fadeIn second" placeholder="Registro Academico" formControlName = "Registro_Academico">
       <input type="password" id="password" class="fadeIn third" placeholder="Contraseña" formControlName = "password">
-      <input type="submit"(click)="logear()" class="fadeIn fourth" (click)="editarusuario(Usuario.Registro_Academico)"value="Log In">
+      <input type="submit"(click)="logear()" class="fadeIn fourth" value="Log In">
     </form> 
 
     <!-- Remind Passowrd -->
