--- a/proyectopractica/src/app/vistas/dashboard/dashboard.component.html
+++ b/proyectopractica/src/app/vistas/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 </head>    
 <body>
-                            
+    <div class = "container p-4">                            
     <div id="main-container">
             <main>
                 <i class='bx bxl-facebook-circle' ></i>
@@ -19,15 +19,15 @@
                 <div class = "container-commets">
                     <div class = "info-commets">
                         <div class="header">
-                            <h4>Usuario</h4>
-                            <h5>30/03/2022</h5>
+                        
+                            <h5>¡¡Comenta y enterate!!</h5>
                         
                         </div> 
-                        <p>Hola me gustaría hablar a cerca del ingenierio 
-                            y la verdad es que es un increible cátedratico
-                            su metodología es agradable, sin embargo sus examenes
-                            suelen ser un poco complicados, pero justos
-                            para lo que enseña.
+                        <p>Hola te gustaría hablar a cerca de tus ingenierios 
+                            y dar una opinion respecto a ello, y decir lo increible
+                            que son los ingenieros que imparten clases de tu 
+                            conocimiento o advertir sobre los mismos, 
+                            Deja tus comentarios, serán de mucha ayuda para el resto.
                         </p>
                         <div class = "footer">
                             <h5 class = "request">Responder</h5>
@@ -37,5 +37,42 @@
             </main>
             
             </div>
+        <!--! Definimos nuestras tarjetas -->
+            <div class="col-md-4" *ngFor = "let comentario of comentarios">
+        <div class="card text-center">
+            <div class="card-header bg-dark d-flex text-white justify-content-between align-items-center">
+                {{comentario.titulo}}
+                <br>
+                
+                
+            <div class="card-group mt-1">
+                
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Creado por:
+                {{comentario.usuarioRA}}
+                <br>
+                Tipo:
+                {{comentario.tipo}}
+            </div>    
+
+                <button class = "btn btn-danger"></button>
+                <i class = "far fa- trash-alt"></i>
+            </div>
+               
+            <div class="card-body">
+                Fecha: 
+                {{comentario.created_at}}
+                <p>{{comentario.descripcion}}</p>
+                <a  class = "btn btn-info btn-block">
+                    Comentar
+                    <!--* Editación de nuestra deck -->
+                </a>
+            </div>               
+        </div> 
+        <br><br>
+        </div>
+        
+        
+        </div>
 </body>            
 </html>
