--- a/proyectopractica/src/app/vistas/usuario/usuario.component.html
+++ b/proyectopractica/src/app/vistas/usuario/usuario.component.html
@@ -9,30 +9,43 @@
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">Perfil</h4>
                 </div>
+<div class= "container">
+                <div class = "usuario-group">
+                    <form [formGroup]="usuarioForm" >       <!--  (ngSubmit)="posteditar(usuarioForm.value)"-->           
                 <div class = "row mt-2">
-                    <div class="col-md-12"><label class="labels">Registro Academico</label><input type="text" class="form-control" placeholder="Registro Academico" value=""></div>
+                    <div class="col-md-12">
+                        <label class="labels">Registro Academico</label>
+                        <input type="text" id = "Registro_Academico" value="" class="form-control" placeholder="Registro Academico" formControlName = "Registro_Academico"></div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-md-6">
-                        <label class="labels">Nombre</label><input type="text" class="form-control" placeholder="Nombres" value="">
+                        <label class="labels">Nombre</label>
+                        <input type="text" class="form-control" placeholder="Nombres" value="KLJLKJ" formControlName = 'nombres'>
                     </div>
-                    <div class="col-md-6"><label class="labels">Apellidos</label><input type="text" class="form-control" value="" placeholder="Apellidos"></div>
+                    <div class="col-md-6">
+                        <label class="labels">Apellidos</label>
+                        <input type="text" class="form-control" value="" placeholder="Apellidos" formControlName = "apellidos"></div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Contraseña</label><input type="text" class="form-control" placeholder="Contraseña" value=""></div>
-                    <div class="col-md-12"><label class="labels">Correo Electronico</label><input type="text" class="form-control" placeholder="Correo Electronico" value=""></div>
+                    <div class="col-md-12"><label class="labels">Contraseña</label>
+                        <input type="text" class="form-control" placeholder="Contraseña" value="" formControlName = "password"></div>
+                    <div class="col-md-12"><label class="labels">Correo Electronico</label>
+                        <input type="text" class="form-control" placeholder="Correo Electronico" value="" formControlName = "correo"></div>
                 </div>
                 <br><br>
-                <button class="btn btn-primary profile-button" type="button">Actualizar</button>
-                
-            </div>
+                <button class="btn btn-primary profile-button" type="button" (click)="posteditar()" >Actualizar</button>
+            </form>        
+                </div> 
+</div>
         </div>
         <div class="col-md-4">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center experience"><span>Asignar Cursos</span></div><br>
                 <button type="button" class="btn btn-light" href = "/">Cursos  </button>         
+            
             </div>
         </div>
+    </div>
 <div class = "comentario-group">
     <form [formGroup]= "comentarioForm"(ngSubmit)= "postComentario(comentarioForm.value)"> 
     <div class = "container">
@@ -56,7 +69,7 @@
                 </div>
             <div>
                 <br>
-                <textarea name="comentarios" rows="5" cols="50" formControlName = "descripcion">Escribe aquí tus comentarios</textarea>
+                <textarea name="comentarios" rows="5" cols="50" formControlName ="descripcion" value = "jejeje0">Escribe aquí tus comentarios</textarea>
                 <br>
 
                 <button type ="submit" class = "btn btn-primary"> Comentar</button> <!--(click)="comentar()"  -->
@@ -66,5 +79,7 @@
 </div>
         </form>
     </div>
+</div>
+</div>
 </div>
 
